# kTerminus

./: .git-guide.md  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  NOTICE  README.md  SECURITY.md  install.sh  justfile  package.json  pnpm-lock.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  publish.yml  release.yml
apps/kt-desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/kt-desktop/src/: App.tsx  index.css  main.tsx
apps/kt-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/kt-desktop/src-tauri/capabilities/: default.json
apps/kt-desktop/src-tauri/icons/: icon.icns
apps/kt-desktop/src-tauri/src/: commands.rs  ipc_client.rs  lib.rs  main.rs  orchestrator.rs  state.rs
apps/kt-desktop/src/components/: ErrorBoundary.tsx  Icons.test.tsx  Icons.tsx  Toast.tsx
apps/kt-desktop/src/components/layout/: Header.tsx  HealthView.tsx  Layout.tsx  LogsView.tsx  MainContent.tsx
apps/kt-desktop/src/components/sidebar/: MachineList.test.tsx  MachineList.tsx  SessionList.tsx  Sidebar.tsx
apps/kt-desktop/src/components/terminal/: DropZoneOverlay.tsx  PaneContainer.tsx  PaneHeader.tsx  PaneLayoutRoot.tsx  TerminalPane.tsx  TerminalPaneWrapper.tsx  TerminalTabs.tsx  TerminalView.tsx
apps/kt-desktop/src/components/topology/: MachineNode.tsx  OrchestratorNode.tsx  TopologyView.tsx
apps/kt-desktop/src/lib/: keyboard.ts  layoutUtils.ts  tauri.ts  theme.ts  utils.ts
apps/kt-desktop/src/stores/: app.ts  layout.ts  machines.ts  sync.ts  terminals.ts  toast.ts
apps/kt-desktop/src/test/: setup.ts  utils.tsx
apps/kt-desktop/src/types/: index.ts  layout.ts
crates/kt-agent/: Cargo.toml
crates/kt-agent/src/: lib.rs  main.rs  pairing.rs  state.rs
crates/kt-agent/src/metrics/: mod.rs
crates/kt-agent/src/pty/: manager.rs  mod.rs
crates/kt-agent/src/tunnel/: connector.rs  mod.rs  reconnect.rs
crates/kt-cli/: Cargo.toml
crates/kt-cli/src/: lib.rs  main.rs
crates/kt-cli/src/commands/: config.rs  connect.rs  kill.rs  list.rs  mod.rs  status.rs
crates/kt-cli/src/ipc/: client.rs  mod.rs
crates/kt-cli/src/output/: mod.rs
crates/kt-cli/tests/: cli_integration.rs  e2e_test.rs
crates/kt-core/: Cargo.toml
crates/kt-core/src/: error.rs  ipc.rs  ipc_auth.rs  lib.rs  pidfile.rs  setup.rs  tailscale.rs  time.rs  types.rs
crates/kt-core/src/config/: agent.rs  machine.rs  mod.rs  orchestrator.rs  serde_utils.rs
crates/kt-core/src/traits/: connection.rs  mod.rs  session.rs
crates/kt-orchestrator/: Cargo.toml
crates/kt-orchestrator/src/: coordinator.rs  lib.rs  main.rs  state.rs
crates/kt-orchestrator/src/auth/: keys.rs  mod.rs  tailscale.rs
crates/kt-orchestrator/src/connection/: health.rs  mod.rs  pool.rs
crates/kt-orchestrator/src/ipc/: mod.rs  server.rs
crates/kt-orchestrator/src/server/: handler.rs  listener.rs  mod.rs
crates/kt-orchestrator/src/session/: cleanup.rs  manager.rs  mod.rs  multiplexer.rs
crates/kt-orchestrator/tests/: ipc_integration.rs
crates/kt-protocol/: Cargo.toml
crates/kt-protocol/src/: codec.rs  error.rs  frame.rs  lib.rs  message.rs  session.rs
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  FAQ.md  README.md  TECHNICAL_DEBT.md
docs/specs/: aesthetic_mockup.html  initial_tech_spec.md  tech_spec.md
