[package]
name = "kt-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "k-Terminus client agent - runs on remote machines"
keywords = ["terminal", "ssh", "agent", "pty", "remote"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "kt-agent"
path = "src/main.rs"

[lib]
name = "kt_agent"
path = "src/lib.rs"

[dependencies]
kt-protocol.workspace = true
kt-core.workspace = true

tokio.workspace = true
tokio-util.workspace = true
russh.workspace = true
russh-keys.workspace = true
portable-pty.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
sha2.workspace = true
clap.workspace = true
reqwest.workspace = true
gethostname = "0.4"
sysinfo = "0.32"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
