[package]
name = "kt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core abstractions and configuration for k-Terminus"
keywords = ["terminal", "ssh", "tailscale", "configuration"]
categories = ["config", "network-programming"]

[dependencies]
kt-protocol.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
sha2.workspace = true
rand.workspace = true

dirs = "5.0"
whoami = "1.5"
gethostname = "0.4"
hex = "0.4"
reqwest.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
