[package]
name = "kt-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "k-Terminus orchestrator daemon - accepts reverse SSH tunnels"

[[bin]]
name = "kt-orchestrator"
path = "src/main.rs"

[lib]
name = "kt_orchestrator"
path = "src/lib.rs"

[dependencies]
kt-protocol.workspace = true
kt-core.workspace = true

tokio.workspace = true
tokio-util = { workspace = true, features = ["net"] }
russh.workspace = true
russh-keys.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
dirs = "5.0"
clap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
