[package]
name = "kt-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "k-Terminus orchestrator daemon - accepts reverse SSH tunnels"
keywords = ["terminal", "ssh", "server", "daemon", "orchestrator"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "kt-orchestrator"
path = "src/main.rs"

[lib]
name = "kt_orchestrator"
path = "src/lib.rs"

[dependencies]
kt-protocol.workspace = true
kt-core.workspace = true

tokio.workspace = true
tokio-util = { workspace = true, features = ["net"] }
russh.workspace = true
russh-keys.workspace = true
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
sha2.workspace = true
dirs = "5.0"
clap.workspace = true
axum.workspace = true
tower.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"
