[package]
name = "kt-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol for k-Terminus session multiplexing"
keywords = ["protocol", "terminal", "multiplexing", "ssh"]
categories = ["network-programming", "encoding"]

[dependencies]
bytes.workspace = true
tokio-util.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
