[package]
name = "kt-desktop"
version.workspace = true
description = "k-Terminus Desktop GUI"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kt_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"

# Reference the workspace crates
kt-protocol = { path = "../../../crates/kt-protocol" }
kt-core = { path = "../../../crates/kt-core" }
kt-orchestrator = { path = "../../../crates/kt-orchestrator" }

# For embedded orchestrator
russh-keys = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
